# game

./: CMakeLists.txt  README.md  bonus.txt  input_a.txt  input_b.txt  input_c.txt  output_a.txt  output_b.txt  output_c.txt
src/: ActionOutcome.h  ChasingAlgorithm.cpp  ChasingAlgorithm.h  Direction.h  GameManager.cpp  GameManager.h  GameObject.h  GameState.h  InteractiveAlgorithm.cpp  InteractiveAlgorithm.h  Logger.h  Mine.h  MyBattleInfo.h  MyPlayer.h  MyPlayerFactory.h  MySatelliteView.h  MyTankAlgorithmFactory.cpp  MyTankAlgorithmFactory.h  Position.h  RotatingAlgorithm.h  Shell.h  Tank.cpp  Tank.h  Wall.h  main.cpp
src/common/: ActionRequest.h  BattleInfo.h  Player.h  PlayerFactory.h  SatelliteView.h  TankAlgorithm.h  TankAlgorithmFactory.h
test/: README.md  generate_algorithm_tests.py  generate_test_cases.py  test_runner.sh  verify_output.py
